--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
     })();
   </script>
 </section>
-     <section id="content-section-5">
+                <section id="content-section-5">
   <div class="greennature-color-wrapper gdlr-show-all greennature-skin-service-half greennature-half-bg-wrapper"
        style="background-color:#f5f5f5; padding-bottom:20px;">
        
@@ -494,9 +494,7 @@
   </div>
   <div class="clear"></div>
 </section>
-
-
-          <section id="content-section-6">
+                <section id="content-section-6">
   <div class="greennature-color-wrapper"id="about" style="background-color:#ffffff;">
     <div class="container">
 
@@ -542,7 +540,7 @@
   </div>
   <div class="clear"></div>
 </section>
-<section id="content-section-77">
+                <section id="content-section-77">
   <div class="greennature-color-wrapper" id="nature" style="background-color:#f8f8f8;">
     <div class="container">
 
@@ -582,8 +580,7 @@
   </div>
   <div class="clear"></div>
 </section>
-
-<section id="content-section-99">
+                <section id="content-section-99">
   <div class="greennature-color-wrapper" id="culture" style="background-color:#ffffff;">
     <div class="container">
 
@@ -623,10 +620,7 @@
   </div>
   <div class="clear"></div>
 </section>
-
-
-
-<section id="content-section-8">
+                <section id="content-section-8">
   <div class="greennature-color-wrapper gdlr-show-all greennature-skin-dark-skin" style="background-color:#1d1d1d; padding-bottom:20px;">
     <div class="container">
       <div class="one-fifth column"></div>
@@ -841,7 +835,6 @@
 </script>
 
 </section>
-
                 <section id="content-section-9">
                         <div class="greennature-parallax-wrapper greennature-background-image gdlr-show-all greennature-skin-dark-skin" id="greennature-parallax-wrapper-3" data-bgspeed="0.15" style="background-image: url('upload/hiddenzones.jpg'); padding-top: 135px; padding-bottom: 80px; ">
                             <div class="container">
@@ -887,7 +880,7 @@
         </div>
     </div>
     <!-- content wrapper -->
-   <footer id="contact" class="footer-wrapper">
+    <footer id="contact" class="footer-wrapper">
   <div class="footer-container container">
 
     <!-- About -->
@@ -937,18 +930,14 @@
           </p>
           <p style="margin:0.4em 0;">
             <i class="greennature-icon fa fa-envelope-o" style="vertical-align:middle; font-size:16px;"></i>
-            &nbsp;<a href="mailto:hello@exploreaarey.org">hello@exploreaarey.org</a>
+            &nbsp;<a href="mailto:info@lemobot.com">info@lemobot.com</a>
           </p>
           <p style="margin:0.4em 0;">
             <i class="greennature-icon fa fa-phone" style="vertical-align:middle; font-size:16px;"></i>
             &nbsp;<a href="tel:+919999999999">+91 98194 13273</a>
           </p>
-          <p style="margin:0.4em 0;">
-            <i class="greennature-icon fa fa-clock-o" style="vertical-align:middle; font-size:16px;"></i>
-            &nbsp;Mon–Fri, 10:00–18:00 IST
-          </p>
           <div style="margin-top:10px;">
-            <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Instagram" title="Instagram">
+            <a href="https://www.instagram.com/explore_aarey/" target="_blank" rel="noopener" aria-label="Instagram" title="Instagram">
               <i class="greennature-icon fa fa-instagram" style="font-size:20px; color:#bbbbbb; margin-right:10px;"></i>
             </a>
             <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="X (Twitter)" title="X (Twitter)">
@@ -1024,12 +1013,10 @@
     </div>
   </div>
 </footer>
-
-<script>
-    // auto-year (keeps it fresh without manual edits)
-    (function () { var y = document.getElementById('ea-year'); if (y) { y.textContent = new Date().getFullYear(); } })();
-</script>
-
+    <script>
+        // auto-year (keeps it fresh without manual edits)
+        (function () { var y = document.getElementById('ea-year'); if (y) { y.textContent = new Date().getFullYear(); } })();
+    </script>
     <div class="greennature-payment-lightbox-overlay" id="greennature-payment-lightbox-overlay">
     </div>
     <!-- body-wrapper -->
